fix: 技能触发支持实体右键
- GuangDianArmorStats: 启用技能触发器 (override_itemtrigger: true)
- GuangDianItemTrigger: 添加 PlayerInteractEntityEvent 监听器
- GuangDianItemTrigger: 禁用技能相关触发器，避免冲突

修复问题: 技能右键只能对方块/空气释放，无法对实体右键