@@ -3,188 +3,238 @@ package cn.guangdian.cleaner.command;
 import cn.guangdian.cleaner.GuangDianCleaner;
 import cn.guangdian.cleaner.config.ConfigManager;
 import cn.guangdian.cleaner.manager.CleanManager;
-import cn.guangdian.rpgcore.RPGCore;
-import cn.guangdian.rpgcore.command.BaseCommand;
-import cn.guangdian.rpgcore.command.CommandContext;
-import cn.guangdian.rpgcore.command.CommandInfo;
-import cn.guangdian.rpgcore.command.Description;
-import cn.guangdian.rpgcore.command.SubCommand;
-import cn.guangdian.rpgcore.message.MiniMessageService;
-import cn.guangdian.rpgcore.service.api.MessageService;
 import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.minimessage.MiniMessage;
+import org.bukkit.Bukkit;
+import org.bukkit.command.Command;
+import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
+import org.bukkit.command.TabExecutor;
+import org.bukkit.entity.Player;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
- * 扫地娘命令 - 使用 RPGCore CommandFramework
- *
- * @author Astraea RPG Team
- * @since 1.2.0
+ * 扫地娘命令处理器
  */
-@CommandInfo(name = "gdclean", description = "扫地娘清理系统", permission = "gdclean.use")
-public class CleanerCommand extends BaseCommand {
+public class CleanerCommand implements CommandExecutor, TabExecutor {
 
     private final GuangDianCleaner plugin;
     private final ConfigManager configManager;
     private final CleanManager cleanManager;
-    private final MiniMessageService miniMessage;
-    private final MessageService messageService;
 
     public CleanerCommand(GuangDianCleaner plugin, ConfigManager configManager, CleanManager cleanManager) {
         this.plugin = plugin;
         this.configManager = configManager;
         this.cleanManager = cleanManager;
-        this.miniMessage = MiniMessageService.getInstance();
-        RPGCore rpgCore = RPGCore.getInstance();
-        this.messageService = rpgCore != null ? rpgCore.getMessageService() : null;
     }
 
+    private final MiniMessage miniMessage = MiniMessage.miniMessage();
+
     /**
-     * 发送消息给发送者
+     * 使用 MiniMessage 解析颜色代码
      */
-    private void send(CommandSender sender, String message) {
-        if (messageService != null) {
-            messageService.send(sender, message);
-        } else {
-            Component component = miniMessage.parse(message);
-            sender.sendMessage(component);
+    private Component color(String message) {
+        if (message == null) return Component.empty();
+        // 将 & 颜色代码转换为 MiniMessage 格式
+        String miniMessageText = message
+            .replace("<black>", "<black>").replace("<dark_blue>", "<dark_blue>")
+            .replace("<dark_green>", "<dark_green>").replace("<dark_aqua>", "<dark_aqua>")
+            .replace("<dark_red>", "<dark_red>").replace("<dark_purple>", "<dark_purple>")
+            .replace("<gold>", "<gold>").replace("<gray>", "<gray>")
+            .replace("<dark_gray>", "<dark_gray>").replace("<blue>", "<blue>")
+            .replace("<green>", "<green>").replace("<aqua>", "<aqua>")
+            .replace("<red>", "<red>").replace("<light_purple>", "<light_purple>")
+            .replace("<yellow>", "<yellow>").replace("<white>", "<white>")
+            .replace("<obfuscated>", "<obfuscated>").replace("<bold>", "<bold>")
+            .replace("<strikethrough>", "<strikethrough>").replace("<underlined>", "<underlined>")
+            .replace("<italic>", "<italic>").replace("<reset>", "<reset>");
+        return miniMessage.deserialize(miniMessageText);
+    }
+
+    @Override
+    public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
+        if (args.length == 0) {
+            sendHelp(sender);
+            return true;
         }
+
+        String subCommand = args[0].toLowerCase();
+
+        switch (subCommand) {
+            case "clean":
+                handleClean(sender);
+                break;
+
+            case "toggle":
+                handleToggle(sender);
+                break;
+
+            case "status":
+                handleStatus(sender);
+                break;
+
+            case "stats":
+                handleStats(sender);
+                break;
+
+            case "reload":
+                handleReload(sender);
+                break;
+
+            case "help":
+                sendHelp(sender);
+                break;
+
+            default:
+                sender.sendMessage(configManager.getMessagePrefix() + color("<red>未知的子命令!"));
+                sendHelp(sender);
+                break;
+        }
+
+        return true;
     }
 
     /**
-     * 显示帮助信息
+     * 处理清理命令
      */
-    @SubCommand(name = "")
-    @Description("显示帮助信息")
-    public void showHelpDefault(CommandContext ctx) {
-        showHelp(ctx.getSender());
-    }
+    private void handleClean(CommandSender sender) {
+        if (!sender.hasPermission("gdclean.clean")) {
+            sender.sendMessage(configManager.getMessageNoPermission());
+            return;
+        }
 
-    /**
-     * 手动执行清理
-     */
-    @SubCommand(name = "clean", permission = "gdclean.clean")
-    @Description("手动执行清理")
-    public void clean(CommandContext ctx) {
         if (cleanManager.isCleaning()) {
-            ctx.sendError("正在清理中，请稍候...");
+            sender.sendMessage(configManager.getMessagePrefix() + color("<red>正在清理中，请稍候..."));
             return;
         }
 
         // Paper 1.21.4 要求实体操作必须在主线程执行
+        // 使用runSync将清理操作调度到主线程
         plugin.runSync(() -> {
             cleanManager.performClean(true);
         });
 
-        ctx.sendSuccess("正在执行清理...");
+        sender.sendMessage(configManager.getMessagePrefix() + color("<green>正在执行清理..."));
     }
 
     /**
-     * 开关自动清理
+     * 处理开关命令
      */
-    @SubCommand(name = "toggle", permission = "gdclean.admin")
-    @Description("开关自动清理")
-    public void toggle(CommandContext ctx) {
+    private void handleToggle(CommandSender sender) {
+        if (!sender.hasPermission("gdclean.admin")) {
+            sender.sendMessage(configManager.getMessageNoPermission());
+            return;
+        }
+
         boolean currentState = configManager.isAutoCleanEnabled();
 
+        // 这里需要通过修改配置来实现持久化开关
+        // 简单起见，我们直接重启任务
         if (currentState) {
             cleanManager.stopAutoCleanTask();
-            ctx.sendError("自动清理已关闭!");
+            sender.sendMessage(configManager.getMessagePrefix() + color("<red>自动清理已关闭!"));
         } else {
             cleanManager.startAutoCleanTask();
-            ctx.sendSuccess("自动清理已开启!");
+            sender.sendMessage(configManager.getMessagePrefix() + color("<green>自动清理已开启!"));
         }
     }
 
     /**
-     * 查看当前状态
+     * 处理状态命令
      */
-    @SubCommand(name = "status")
-    @Description("查看当前状态")
-    public void status(CommandContext ctx) {
-        CommandSender sender = ctx.getSender();
-        send(sender, "<gold>========== 当前状态 ==========");
-        send(sender, "<yellow>自动清理: " + (configManager.isAutoCleanEnabled() ? "<green>开启" : "<red>关闭"));
-        send(sender, "<yellow>清理间隔: <green>" + configManager.getAutoCleanInterval() + "秒");
-        send(sender, "<yellow>预警时间: <green>" + configManager.getWarningTime() + "秒");
-        send(sender, "<yellow>过滤模式: <green>" + configManager.getFilterMode().name());
-        send(sender, "<yellow>世界模式: <green>" + configManager.getWorldMode().name());
-        send(sender, "<yellow>保护命名物品: " + (configManager.isProtectNamedItems() ? "<green>是" : "<red>否"));
-        send(sender, "<yellow>保护玩家掉落: " + (configManager.isProtectPlayerDrops() ? "<green>是" : "<red>否"));
-        send(sender, "<gold>================================");
-    }
-
-    /**
-     * 查看清理统计
-     */
-    @SubCommand(name = "stats")
-    @Description("查看清理统计")
-    public void stats(CommandContext ctx) {
-        CommandSender sender = ctx.getSender();
-        send(sender, "<gold>========== 清理统计 ==========");
-        send(sender, "<yellow>累计清理物品: <green>" + configManager.getTotalCleanedItems() + "个");
-        send(sender, "<yellow>累计清理实体: <green>" + configManager.getTotalCleanedEntities() + "个");
-
-        if (ctx.hasPermission("gdclean.admin")) {
-            send(sender, "<gray>使用 <yellow>/gdclean resetstats <gray>重置统计");
+    private void handleStatus(CommandSender sender) {
+        if (!sender.hasPermission("gdclean.status")) {
+            sender.sendMessage(configManager.getMessageNoPermission());
+            return;
         }
-        send(sender, "<gold>================================");
+
+        Component status = configManager.isAutoCleanEnabled() ? color("<green>开启") : color("<red>关闭");
+        sender.sendMessage(color(configManager.getMessagePrefix() + "当前状态:"));
+        sender.sendMessage(color("  <yellow>自动清理: ").append(status));
+        sender.sendMessage(color("  <yellow>清理间隔: <green>" + configManager.getAutoCleanInterval() + "秒"));
+        sender.sendMessage(color("  <yellow>预警时间: <green>" + configManager.getWarningTime() + "秒"));
+        sender.sendMessage(color("  <yellow>过滤模式: <green>" + configManager.getFilterMode().name()));
+        sender.sendMessage(color("  <yellow>世界模式: <green>" + configManager.getWorldMode().name()));
+        sender.sendMessage(color("  <yellow>保护命名物品: " + (configManager.isProtectNamedItems() ? "<green>是" : "<red>否")));
+        sender.sendMessage(color("  <yellow>保护玩家掉落: " + (configManager.isProtectPlayerDrops() ? "<green>是" : "<red>否")));
     }
 
     /**
-     * 重新加载配置
+     * 处理统计命令
      */
-    @SubCommand(name = "reload", permission = "gdclean.admin")
-    @Description("重新加载配置")
-    public void reload(CommandContext ctx) {
+    private void handleStats(CommandSender sender) {
+        if (!sender.hasPermission("gdclean.stats")) {
+            sender.sendMessage(configManager.getMessageNoPermission());
+            return;
+        }
+
+        sender.sendMessage(configManager.getMessagePrefix() + color("清理统计:"));
+        sender.sendMessage(color("  <yellow>累计清理物品: <green>" + configManager.getTotalCleanedItems() + "个"));
+        sender.sendMessage(color("  <yellow>累计清理实体: <green>" + configManager.getTotalCleanedEntities() + "个"));
+
+        // 提供重置选项
+        if (sender.hasPermission("gdclean.admin")) {
+            sender.sendMessage(color("  <gray>使用 <yellow>/gdclean resetstats <gray>重置统计"));
+        }
+    }
+
+    /**
+     * 处理重载命令
+     */
+    private void handleReload(CommandSender sender) {
+        if (!sender.hasPermission("gdclean.admin")) {
+            sender.sendMessage(configManager.getMessageNoPermission());
+            return;
+        }
+
         configManager.loadConfig();
         cleanManager.restartAutoCleanTask();
-        ctx.sendSuccess("配置已重新加载!");
+
+        sender.sendMessage(configManager.getMessagePrefix() + configManager.getMessageReload());
     }
 
     /**
-     * 显示帮助
+     * 发送帮助信息
      */
-    @SubCommand(name = "help")
-    @Description("显示帮助信息")
-    public void help(CommandContext ctx) {
-        showHelp(ctx.getSender());
-    }
-
-    @Override
-    public void showHelp(CommandSender sender) {
-        send(sender, "<gold><bold>========== 扫地娘命令帮助 ==========");
-        send(sender, "<yellow>/gdclean clean <gray>- 手动执行清理");
-        send(sender, "<yellow>/gdclean status <gray>- 查看当前状态");
-        send(sender, "<yellow>/gdclean stats <gray>- 查看清理统计");
+    private void sendHelp(CommandSender sender) {
+        sender.sendMessage(configManager.getMessagePrefix() + color("命令帮助:"));
+        sender.sendMessage(color("  <yellow>/gdclean clean <gray>- 手动执行清理"));
+        sender.sendMessage(color("  <yellow>/gdclean status <gray>- 查看当前状态"));
+        sender.sendMessage(color("  <yellow>/gdclean stats <gray>- 查看清理统计"));
 
         if (sender.hasPermission("gdclean.admin")) {
-            send(sender, "<yellow>/gdclean toggle <gray>- 开关自动清理");
-            send(sender, "<yellow>/gdclean reload <gray>- 重载配置文件");
-            send(sender, "<yellow>/gdclean resetstats <gray>- 重置统计数据");
+            sender.sendMessage(color("  <yellow>/gdclean toggle <gray>- 开关自动清理"));
+            sender.sendMessage(color("  <yellow>/gdclean reload <gray>- 重载配置文件"));
+            sender.sendMessage(color("  <yellow>/gdclean resetstats <gray>- 重置统计数据"));
         }
 
-        send(sender, "<yellow>/gdclean help <gray>- 显示此帮助");
-        send(sender, "<gold><bold>=====================================");
+        sender.sendMessage(color("  <yellow>/gdclean help <gray>- 显示此帮助"));
     }
 
     @Override
-    public List<String> onTabComplete(java.lang.reflect.Method subCommandMethod, CommandContext context) {
+    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
         List<String> completions = new ArrayList<>();
 
-        if (context.getArgCount() == 0) {
-            completions.addAll(List.of("clean", "status", "stats", "help"));
-            if (context.hasPermission("gdclean.admin")) {
-                completions.addAll(List.of("toggle", "reload"));
+        if (args.length == 1) {
+            List<String> subCommands = Arrays.asList("clean", "status", "stats", "help");
+
+            if (sender.hasPermission("gdclean.admin")) {
+                subCommands = new ArrayList<>(subCommands);
+                subCommands.add("toggle");
+                subCommands.add("reload");
+                subCommands.add("resetstats");
+            }
+
+            for (String subCmd : subCommands) {
+                if (subCmd.startsWith(args[0].toLowerCase())) {
+                    completions.add(subCmd);
+                }
             }
         }
 
-        String lastArg = context.getStringArgOrDefault(context.getArgCount() - 1, "").toLowerCase();
-        return completions.stream()
-            .filter(s -> s.toLowerCase().startsWith(lastArg))
-            .collect(Collectors.toList());
+        return completions;
     }
 }
